Update hari ini Front-end Home

--- a/public/asset/css/colors.css
+++ b/public/asset/css/colors.css
@@ -3,12 +3,13 @@
         Template Name: auricle
 -------------------------------------------------------------------*/
 
+
 /*------------------------------------------------------------------
     1. default color
 -------------------------------------------------------------------*/
 
 @media (min-width: 992px) {
-    .white_header_font .menu > ul > li > a {
+    .white_header_font .menu>ul>li>a {
         color: #fff;
     }
 }
@@ -18,7 +19,7 @@
 }
 
 .bt_main {
-    background: #1e72bc;
+    background: #4CAF50;
 }
 
 .bt_main:hover,
@@ -33,14 +34,14 @@
 
 .reverse_bt.bt_main:hover,
 .reverse_bt.bt_main:focus {
-    background: #1e72bc;
+    background: #4CAF50;
 }
 
 .white_bt.bt_main {
-    color: #1e72bc;
+    color: #4CAF50;
 }
 
-.white_bt.bt_main:hover, 
+.white_bt.bt_main:hover,
 .white_bt.bt_main:focus {
     background: #30CFD0;
     color: #fff;
@@ -56,26 +57,27 @@ footer ul.social_icons li a:hover {
 -------------------------------------------------------------------*/
 
 .purple_theme ul.pagination li.page-item.active .page-link {
-	background: #1e72bc;
+    background: #1e72bc;
     color: #fff;
     border-color: #1e72bc;
 }
+
 
 /*------------------------------------------------------------------
     2. light sky blue
 -------------------------------------------------------------------*/
 
-.light_sky_blue .menu > ul > li:hover > a,
-.light_sky_blue .menu > ul > li:focus > a,
-.light_sky_blue .menu > ul > li.active > a {
+.light_sky_blue .menu>ul>li:hover>a,
+.light_sky_blue .menu>ul>li:focus>a,
+.light_sky_blue .menu>ul>li.active>a {
     color: #21d8de;
 }
 
-.light_sky_blue .menu > ul > li > ul {
+.light_sky_blue .menu>ul>li>ul {
     border-color: #21d8de;
 }
 
-.light_sky_blue .menu > ul > li > ul > li a:hover {
+.light_sky_blue .menu>ul>li>ul>li a:hover {
     color: #21d8de;
 }
 
@@ -145,17 +147,17 @@ footer ul.social_icons li a:hover {
     background: #ffb125;
 }
 
-.yellow_theme .menu > ul > li:hover > a,
-.yellow_theme .menu > ul > li:focus > a,
-.yellow_theme .menu > ul > li.active > a {
+.yellow_theme .menu>ul>li:hover>a,
+.yellow_theme .menu>ul>li:focus>a,
+.yellow_theme .menu>ul>li.active>a {
     color: #ffb125;
 }
 
-.yellow_theme .menu > ul > li > ul {
+.yellow_theme .menu>ul>li>ul {
     border-color: #ffb125;
 }
 
-.yellow_theme .menu > ul > li > ul > li a:hover {
+.yellow_theme .menu>ul>li>ul>li a:hover {
     color: #ffb125;
 }
 
@@ -206,6 +208,7 @@ footer ul.social_icons li a:hover {
     color: #fff;
 }
 
+
 /** menu **/
 
 .yellow_theme .menu-mobile:hover,
@@ -215,6 +218,7 @@ footer ul.social_icons li a:hover {
     border-color: #ffb125;
     color: #ffb125;
 }
+
 
 /*------------------------------------------------------------------
     3. golden yellow
@@ -234,17 +238,17 @@ footer ul.social_icons li a:hover {
     margin-right: 7px;
 }
 
-.golden_yellow_theme .menu > ul > li:hover > a,
-.golden_yellow_theme .menu > ul > li:focus > a,
-.golden_yellow_theme .menu > ul > li.active > a {
+.golden_yellow_theme .menu>ul>li:hover>a,
+.golden_yellow_theme .menu>ul>li:focus>a,
+.golden_yellow_theme .menu>ul>li.active>a {
     color: #c9b072;
 }
 
-.golden_yellow_theme .menu > ul > li > ul {
+.golden_yellow_theme .menu>ul>li>ul {
     border-color: #c9b072;
 }
 
-.golden_yellow_theme .menu > ul > li > ul > li a:hover {
+.golden_yellow_theme .menu>ul>li>ul>li a:hover {
     color: #c9b072;
 }
 
@@ -316,6 +320,7 @@ footer ul.social_icons li a:hover {
     color: #fff;
 }
 
+
 /** menu **/
 
 .golden_yellow_theme .menu-mobile:hover,
@@ -329,21 +334,22 @@ footer ul.social_icons li a:hover {
     color: #d9bf77;
 }
 
+
 /*------------------------------------------------------------------
     3. green theme
 -------------------------------------------------------------------*/
 
-.green_theme .menu > ul > li:hover > a,
-.green_theme .menu > ul > li:focus > a,
-.green_theme .menu > ul > li.active > a {
+.green_theme .menu>ul>li:hover>a,
+.green_theme .menu>ul>li:focus>a,
+.green_theme .menu>ul>li.active>a {
     color: #93cc39;
 }
 
-.green_theme .menu > ul > li > ul {
+.green_theme .menu>ul>li>ul {
     border-color: #93cc39;
 }
 
-.green_theme .menu > ul > li > ul > li a:hover {
+.green_theme .menu>ul>li>ul>li a:hover {
     color: #93cc39;
 }
 
@@ -428,6 +434,7 @@ footer ul.social_icons li a:hover {
     color: #fff;
 }
 
+
 /** menu **/
 
 .green_theme .menu-mobile:hover,
@@ -441,11 +448,12 @@ footer ul.social_icons li a:hover {
     color: #93cc39;
 }
 
+
 /** yellow theme 2 **/
 
-.yellow_2 .menu > ul > li:hover > a,
-.yellow_2 .menu > ul > li:focus > a,
-.yellow_2 .menu > ul > li.active > a {
+.yellow_2 .menu>ul>li:hover>a,
+.yellow_2 .menu>ul>li:focus>a,
+.yellow_2 .menu>ul>li.active>a {
     color: #ffc200;
 }
 
@@ -461,11 +469,11 @@ footer ul.social_icons li a:hover {
     background: rgba(255, 194, 0, .9);
 }
 
-.yellow_2 .menu > ul > li > ul {
+.yellow_2 .menu>ul>li>ul {
     border-color: #ffc200;
 }
 
-.yellow_2 .menu > ul > li > ul > li a:hover {
+.yellow_2 .menu>ul>li>ul>li a:hover {
     color: #ffc200;
 }
 
@@ -536,9 +544,8 @@ footer ul.social_icons li a:hover {
 }
 
 .yellow_2 .theme_color:hover,
-.yellow_2 .theme_color:focus {
+.yellow_2 .theme_color:focus {}
 
-}
 
 /** menu **/
 
@@ -563,19 +570,20 @@ footer ul.social_icons li a:hover {
     background: #fff;
 }
 
+
 /** brown_color_theme **/
 
-.brown_color_theme .menu > ul > li:hover > a,
-.brown_color_theme .menu > ul > li:focus > a,
-.brown_color_theme .menu > ul > li.active > a {
+.brown_color_theme .menu>ul>li:hover>a,
+.brown_color_theme .menu>ul>li:focus>a,
+.brown_color_theme .menu>ul>li.active>a {
     color: #cda46a;
 }
 
-.brown_color_theme .menu > ul > li > ul {
+.brown_color_theme .menu>ul>li>ul {
     border-color: #cda46a;
 }
 
-.brown_color_theme .menu > ul > li > ul > li a:hover {
+.brown_color_theme .menu>ul>li>ul>li a:hover {
     color: #cda46a;
 }
 
@@ -650,6 +658,7 @@ footer ul.social_icons li a:hover {
     color: #222 !important;
 }
 
+
 /** menu **/
 
 .brown_color_theme .menu-mobile:hover,
@@ -665,23 +674,24 @@ footer ul.social_icons li a:hover {
     color: #cda46a;
 }
 
+
 /** pink color theme **/
 
 .pink_color_theme .cont_boder_style_slide:after {
     background: #ff4e58;
 }
 
-.pink_color_theme .menu > ul > li:hover > a,
-.pink_color_theme .menu > ul > li:focus > a,
-.pink_color_theme .menu > ul > li.active > a {
+.pink_color_theme .menu>ul>li:hover>a,
+.pink_color_theme .menu>ul>li:focus>a,
+.pink_color_theme .menu>ul>li.active>a {
     color: #ff4e58;
 }
 
-.pink_color_theme .menu > ul > li > ul {
+.pink_color_theme .menu>ul>li>ul {
     border-color: #ff4e58;
 }
 
-.pink_color_theme .menu > ul > li > ul > li a:hover {
+.pink_color_theme .menu>ul>li>ul>li a:hover {
     color: #ff4e58;
 }
 
@@ -762,6 +772,7 @@ footer ul.social_icons li a:hover {
     color: #fff;
 }
 
+
 /** menu **/
 
 .pink_color_theme .menu-mobile:hover,
@@ -809,19 +820,20 @@ footer ul.social_icons li a:hover {
     background: #292929;
 }
 
+
 /** light pink color **/
 
-.light_pink .menu > ul > li:hover > a,
-.light_pink .menu > ul > li:focus > a,
-.light_pink .menu > ul > li.active > a {
+.light_pink .menu>ul>li:hover>a,
+.light_pink .menu>ul>li:focus>a,
+.light_pink .menu>ul>li.active>a {
     color: #ff9de2;
 }
 
-.light_pink .menu > ul > li > ul {
+.light_pink .menu>ul>li>ul {
     border-color: #ff9de2;
 }
 
-.light_pink .menu > ul > li > ul > li a:hover {
+.light_pink .menu>ul>li>ul>li a:hover {
     color: #ff9de2;
 }
 
@@ -872,6 +884,7 @@ footer ul.social_icons li a:hover {
     color: #fff;
 }
 
+
 /** menu **/
 
 .light_pink .menu-mobile:hover,
@@ -882,23 +895,24 @@ footer ul.social_icons li a:hover {
     color: #ff9de2;
 }
 
+
 /** light brown theme **/
 
 .light_brown .theme_color {
     color: #d19d64 !important;
 }
 
-.light_brown .menu > ul > li:hover > a,
-.light_brown .menu > ul > li:focus > a,
-.light_brown .menu > ul > li.active > a {
+.light_brown .menu>ul>li:hover>a,
+.light_brown .menu>ul>li:focus>a,
+.light_brown .menu>ul>li.active>a {
     color: #d19d64;
 }
 
-.light_brown .menu > ul > li > ul {
+.light_brown .menu>ul>li>ul {
     border-color: #d19d64;
 }
 
-.light_brown .menu > ul > li > ul > li a:hover {
+.light_brown .menu>ul>li>ul>li a:hover {
     color: #d19d64;
 }
 
@@ -952,6 +966,7 @@ footer ul.social_icons li a:hover {
     color: #fff;
 }
 
+
 /** menu **/
 
 .light_brown .menu-mobile:hover,
@@ -961,6 +976,7 @@ footer ul.social_icons li a:hover {
     border-color: #d19d64;
     color: #d19d64;
 }
+
 
 /** yello color 3 **/
 
@@ -972,17 +988,17 @@ footer ul.social_icons li a:hover {
     background: #e4b95b !important;
 }
 
-.yellow_3 .menu > ul > li:hover > a,
-.yellow_3 .menu > ul > li:focus > a,
-.yellow_3 .menu > ul > li.active > a {
+.yellow_3 .menu>ul>li:hover>a,
+.yellow_3 .menu>ul>li:focus>a,
+.yellow_3 .menu>ul>li.active>a {
     color: #e4b95b;
 }
 
-.yellow_3 .menu > ul > li > ul {
+.yellow_3 .menu>ul>li>ul {
     border-color: #e4b95b;
 }
 
-.yellow_3 .menu > ul > li > ul > li a:hover {
+.yellow_3 .menu>ul>li>ul>li a:hover {
     color: #e4b95b;
 }
 
@@ -1031,6 +1047,7 @@ footer ul.social_icons li a:hover {
     color: #fff;
 }
 
+
 /** menu **/
 
 .yellow_3 .menu-mobile:hover,
@@ -1041,19 +1058,20 @@ footer ul.social_icons li a:hover {
     color: #e4b95b;
 }
 
+
 /** light purple color **/
 
-.light_purple .menu > ul > li:hover > a,
-.light_purple .menu > ul > li:focus > a,
-.light_purple .menu > ul > li.active > a {
+.light_purple .menu>ul>li:hover>a,
+.light_purple .menu>ul>li:focus>a,
+.light_purple .menu>ul>li.active>a {
     color: #ce93d8;
 }
 
-.light_purple .menu > ul > li > ul {
+.light_purple .menu>ul>li>ul {
     border-color: #ce93d8;
 }
 
-.light_purple .menu > ul > li > ul > li a:hover {
+.light_purple .menu>ul>li>ul>li a:hover {
     color: #ce93d8;
 }
 
@@ -1104,6 +1122,7 @@ footer ul.social_icons li a:hover {
     color: #fff;
 }
 
+
 /** menu **/
 
 .light_purple .menu-mobile:hover,
@@ -1114,23 +1133,24 @@ footer ul.social_icons li a:hover {
     color: #ce93d8;
 }
 
+
 /** blue theme **/
 
 .blue_bg {
     background: #118df0;
 }
 
-.blue_theme .menu > ul > li:hover > a,
-.blue_theme .menu > ul > li:focus > a,
-.blue_theme .menu > ul > li.active > a {
+.blue_theme .menu>ul>li:hover>a,
+.blue_theme .menu>ul>li:focus>a,
+.blue_theme .menu>ul>li.active>a {
     color: #118df0;
 }
 
-.blue_theme .menu > ul > li > ul {
+.blue_theme .menu>ul>li>ul {
     border-color: #118df0;
 }
 
-.blue_theme .menu > ul > li > ul > li a:hover {
+.blue_theme .menu>ul>li>ul>li a:hover {
     color: #118df0;
 }
 
@@ -1181,6 +1201,7 @@ footer ul.social_icons li a:hover {
     color: #fff;
 }
 
+
 /** menu **/
 
 .blue_theme .menu-mobile:hover,
@@ -1191,11 +1212,12 @@ footer ul.social_icons li a:hover {
     color: #118df0;
 }
 
+
 /** blue2 theme **/
 
-.blue2_theme .menu > ul > li:hover > a,
-.blue2_theme .menu > ul > li:focus > a,
-.blue2_theme .menu > ul > li.active > a {
+.blue2_theme .menu>ul>li:hover>a,
+.blue2_theme .menu>ul>li:focus>a,
+.blue2_theme .menu>ul>li.active>a {
     color: #4f6dcd;
 }
 
@@ -1207,11 +1229,11 @@ footer ul.social_icons li a:hover {
     color: #4f6dcd;
 }
 
-.blue2_theme .menu > ul > li > ul {
+.blue2_theme .menu>ul>li>ul {
     border-color: #4f6dcd;
 }
 
-.blue2_theme .menu > ul > li > ul > li a:hover {
+.blue2_theme .menu>ul>li>ul>li a:hover {
     color: #4f6dcd;
 }
 
@@ -1262,6 +1284,7 @@ footer ul.social_icons li a:hover {
     color: #fff;
 }
 
+
 /** menu **/
 
 .blue2_theme .menu-mobile:hover,
@@ -1272,15 +1295,16 @@ footer ul.social_icons li a:hover {
     color: #435aa1;
 }
 
+
 /** blue 3 **/
 
 .blue3_theme .theme_color_bg {
     background-color: #0163d2;
 }
 
-.blue3_theme .menu > ul > li:hover > a,
-.blue3_theme .menu > ul > li:focus > a,
-.blue3_theme .menu > ul > li.active > a {
+.blue3_theme .menu>ul>li:hover>a,
+.blue3_theme .menu>ul>li:focus>a,
+.blue3_theme .menu>ul>li.active>a {
     color: #00d9ef;
 }
 
@@ -1288,11 +1312,11 @@ footer ul.social_icons li a:hover {
     color: #0163d2;
 }
 
-.blue3_theme .menu > ul > li > ul {
+.blue3_theme .menu>ul>li>ul {
     border-color: #0163d2;
 }
 
-.blue3_theme .menu > ul > li > ul > li a:hover {
+.blue3_theme .menu>ul>li>ul>li a:hover {
     color: #0163d2;
 }
 
@@ -1344,6 +1368,7 @@ footer ul.social_icons li a:hover {
     color: #fff;
 }
 
+
 /** menu **/
 
 .blue3_theme .menu-mobile:hover,
@@ -1359,9 +1384,10 @@ footer ul.social_icons li a:hover {
 }
 
 .product_detail_page .tab_bar_section ul.nav.nav-tabs li a.active {
-	background: #0163d2;
-	color: #fff;
+    background: #0163d2;
+    color: #fff;
 }
+
 
 /** funky red **/
 
@@ -1373,9 +1399,9 @@ footer ul.social_icons li a:hover {
     background-color: #ec4045;
 }
 
-.funkyred_theme .menu > ul > li:hover > a,
-.funkyred_theme .menu > ul > li:focus > a,
-.funkyred_theme .menu > ul > li.active > a {
+.funkyred_theme .menu>ul>li:hover>a,
+.funkyred_theme .menu>ul>li:focus>a,
+.funkyred_theme .menu>ul>li.active>a {
     color: #ec4045;
 }
 
@@ -1383,11 +1409,11 @@ footer ul.social_icons li a:hover {
     color: #ec4045;
 }
 
-.funkyred_theme .menu > ul > li > ul {
+.funkyred_theme .menu>ul>li>ul {
     border-color: #ec4045;
 }
 
-.funkyred_theme .menu > ul > li > ul > li a:hover {
+.funkyred_theme .menu>ul>li>ul>li a:hover {
     color: #ec4045;
 }
 
@@ -1439,6 +1465,7 @@ footer ul.social_icons li a:hover {
     color: #fff;
 }
 
+
 /** menu **/
 
 .funkyred_theme .menu-mobile:hover,
@@ -1449,15 +1476,16 @@ footer ul.social_icons li a:hover {
     color: #ec4045;
 }
 
+
 /** light red **/
 
 .light_red .theme_color_bg {
     background-color: #ff9999;
 }
 
-.light_red .menu > ul > li:hover > a,
-.light_red .menu > ul > li:focus > a,
-.light_red .menu > ul > li.active > a {
+.light_red .menu>ul>li:hover>a,
+.light_red .menu>ul>li:focus>a,
+.light_red .menu>ul>li.active>a {
     color: #ff9999 !important;
 }
 
@@ -1465,11 +1493,11 @@ footer ul.social_icons li a:hover {
     color: #ff9999;
 }
 
-.light_red .menu > ul > li > ul {
+.light_red .menu>ul>li>ul {
     border-color: #ff9999;
 }
 
-.light_red .menu > ul > li > ul > li a:hover {
+.light_red .menu>ul>li>ul>li a:hover {
     color: #ff9999;
 }
 
@@ -1529,6 +1557,7 @@ footer ul.social_icons li a:hover {
     color: #ff9999;
 }
 
+
 /** menu **/
 
 .light_red .menu-mobile:hover,
@@ -1580,15 +1609,16 @@ footer ul.social_icons li a:hover {
     color: #444f5a;
 }
 
+
 /** orange theme **/
 
 .orange_theme .theme_color_bg {
     background-color: #ff5733;
 }
 
-.orange_theme .menu > ul > li:hover > a,
-.orange_theme .menu > ul > li:focus > a,
-.orange_theme .menu > ul > li.active > a {
+.orange_theme .menu>ul>li:hover>a,
+.orange_theme .menu>ul>li:focus>a,
+.orange_theme .menu>ul>li.active>a {
     color: #ff5733;
 }
 
@@ -1596,11 +1626,11 @@ footer ul.social_icons li a:hover {
     color: #ff5733;
 }
 
-.orange_theme .menu > ul > li > ul {
+.orange_theme .menu>ul>li>ul {
     border-color: #ff5733;
 }
 
-.orange_theme .menu > ul > li > ul > li a:hover {
+.orange_theme .menu>ul>li>ul>li a:hover {
     color: #ff5733;
 }
 
@@ -1656,6 +1686,7 @@ footer ul.social_icons li a:hover {
     background: #c70039;
 }
 
+
 /** menu **/
 
 .orange_theme .menu-mobile:hover,
@@ -1666,15 +1697,16 @@ footer ul.social_icons li a:hover {
     color: #ff5733;
 }
 
+
 /** sky blue **/
 
 .skyblue .theme_color_bg {
     background-color: #7ecddf;
 }
 
-.skyblue .menu > ul > li:hover > a,
-.skyblue .menu > ul > li:focus > a,
-.skyblue .menu > ul > li.active > a {
+.skyblue .menu>ul>li:hover>a,
+.skyblue .menu>ul>li:focus>a,
+.skyblue .menu>ul>li.active>a {
     color: #000;
 }
 
@@ -1682,11 +1714,11 @@ footer ul.social_icons li a:hover {
     color: #7ecddf;
 }
 
-.skyblue .menu > ul > li > ul {
+.skyblue .menu>ul>li>ul {
     border-color: #7ecddf;
 }
 
-.skyblue .menu > ul > li > ul > li a:hover {
+.skyblue .menu>ul>li>ul>li a:hover {
     color: #7ecddf;
 }
 
@@ -1742,6 +1774,7 @@ footer ul.social_icons li a:hover {
     background: #5bbdd4;
 }
 
+
 /** menu **/
 
 .skyblue .menu-mobile:hover,
@@ -1760,15 +1793,16 @@ footer ul.social_icons li a:hover {
     background: rgba(126, 205, 223, .9);
 }
 
+
 /** orange theme 2 **/
 
 .orange2_theme .theme_color_bg {
     background-color: #ec774b;
 }
 
-.orange2_theme .menu > ul > li:hover > a,
-.orange2_theme .menu > ul > li:focus > a,
-.orange2_theme .menu > ul > li.active > a {
+.orange2_theme .menu>ul>li:hover>a,
+.orange2_theme .menu>ul>li:focus>a,
+.orange2_theme .menu>ul>li.active>a {
     color: #000;
 }
 
@@ -1776,11 +1810,11 @@ footer ul.social_icons li a:hover {
     color: #ec774b;
 }
 
-.orange2_theme .menu > ul > li > ul {
+.orange2_theme .menu>ul>li>ul {
     border-color: #ec774b;
 }
 
-.orange2_theme .menu > ul > li > ul > li a:hover {
+.orange2_theme .menu>ul>li>ul>li a:hover {
     color: #ec774b;
 }
 
@@ -1842,6 +1876,7 @@ footer ul.social_icons li a:hover {
     background: #5bbdd4;
 }
 
+
 /** menu **/
 
 .orange2_theme .menu-mobile:hover,
@@ -1869,15 +1904,16 @@ footer ul.social_icons li a:hover {
     background: rgba(126, 205, 223, .9);
 }
 
+
 /** blue_green_theme **/
 
 .blue_green_theme .theme_color_bg {
     background-color: #17c967;
 }
 
-.blue_green_theme .menu > ul > li:hover > a,
-.blue_green_theme .menu > ul > li:focus > a,
-.blue_green_theme .menu > ul > li.active > a {
+.blue_green_theme .menu>ul>li:hover>a,
+.blue_green_theme .menu>ul>li:focus>a,
+.blue_green_theme .menu>ul>li.active>a {
     color: #000;
 }
 
@@ -1885,11 +1921,11 @@ footer ul.social_icons li a:hover {
     color: #17c967;
 }
 
-.blue_green_theme .menu > ul > li > ul {
+.blue_green_theme .menu>ul>li>ul {
     border-color: #17c967;
 }
 
-.blue_green_theme .menu > ul > li > ul > li a:hover {
+.blue_green_theme .menu>ul>li>ul>li a:hover {
     color: #17c967;
 }
 
